--- a/hacksoft/templates/website/home_page.html
+++ b/hacksoft/templates/website/home_page.html
@@ -85,7 +85,10 @@
         {{ page.our_team_center|richtext }}
       </div>
       <div class="section-content-row align-center our-team-images float-container">
-
+        <a href="/our-work/">
+          {% image page.team_image_main fill-1920x1200 class="team-main" %}
+          {% image page.team_image_secondary fill-1920x1200 class="team-secondary" %}
+        </a>
       </div>
     </div>
   </div>
